--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!-- TODO: Agrega una estructura basica con hello world -->
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Conteo de Vocales</title>
+</head>
+<body>
+    <header>
+        <h1>Conteo de Vocales</h1>
+    </header>
+    <main>
+        <form>
+            <label for="nombre">Escribe tu nombre</label>
+            <input type="text" id="nombre" name="nombre">
+            <p id="vocales"></p>
+        </form>
+    </main>
+</body>
+</html>
