feat: cambios de titulo en index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conteo de Vocales</title>
+    <title>Andrea Hola</title>
 </head>
 <body>
     <header>
-        <h1>Conteo de Vocales</h1>
+        <h1>Andy</h1>
     </header>
     <main>
         <form>
