feat: conteo de vocales

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Andy</h1>
+        <h1>Conteo de vocales</h1>
     </header>
     <main>
         <form>
@@ -17,5 +17,6 @@
             <p id="vocales"></p>
         </form>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
