feat: funcion que maneja el input nombre

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <form>
             <label for="nombre">Escribe tu nombre</label>
-            <input type="text" id="nombre" name="nombre">
+            <input onchange="manejoDelEventoDeInputNombre()"type="text" id="nombre" name="nombre">
             <p id="vocales"></p>
         </form>
     </main>
